cmake_minimum_required(VERSION 3.15)
project(zilliz_gis LANGUAGES CUDA CXX)
set(CMAKE_CXX_STANDARD 17)
find_package(CUDA REQUIRED)
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler -fPIC -D_FORCE_INLINES -arch sm_60 --expt-extended-lambda")
if(CMAKE_ENCRYPT_LOG STREQUAL "on")
    add_definitions("-DENCRYPT_LOG")
endif()
message("CMAKE_CUDA_FLAGS=${CMAKE_CUDA_FLAGS}")
set(CUDA_INCLUDE /opt/cuda/include)
set(CUDA_LIB /opt/cuda/lib64)

include_directories(${CUDA_INCLUDE})
link_directories(${CUDA_LIB})

set(CMAKE_CUDA_FLAGS "-Wall -Werror -Wextra")

include_directories(include)
add_subdirectory(src)
add_subdirectory(unittest)
